--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: My GitHub Page  # サイトのタイトル
-author: Your Name  # 自分の名前（またはニックネーム）
-description: This is my first GitHub Pages site!  # サイトの説明
+title: ヨーロッパの舞台芸術  
+author: 山根あや 
+description: ヨーロッパの舞台芸術について紹介します
